Plates to Weights fixing input alignments and adding div spacing.

--- a/platesToWeightCalculator/styles.css
+++ b/platesToWeightCalculator/styles.css
@@ -5,13 +5,6 @@ body {
   background-color: #f6f6f6;
 }
 
-.contentDiv {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 70rem;
-  background-color: #fafafa;
-}
-
 h1 {
   font-size: 2.2rem;
   font-family: "open sans", sans-serif;
@@ -20,15 +13,8 @@ h1 {
   margin: 0 10px 0 10px;
 }
 
-li:hover {
-  background-color: #001a57;
-}
-
-.content {
-  clear: both;
-  margin: 0 10px 0 10px;
-  display: flex;
-  flex-direction: column;
+div {
+  margin-bottom: 0.3em;
 }
 
 input {
@@ -37,7 +23,8 @@ input {
 }
 
 .numberInput {
-  height: 1.2em;
+  /*height: 1.2em;*/
+  height: 1.5em;
   margin: 0em 0em 0.19em 0em;
 }
 
@@ -46,10 +33,10 @@ label {
 }
 
 input[type="button"] {
-  height: 1.5em;
-  margin: 0em 1em 0.192em 0em;
+  /*height: 1.5em;*/
+  margin: 0.015em 1em 0.192em 0em;
   padding: 0em 1em 0em 1em;
-  vertical-align: top;
+  /*vertical-align: top;*/
 }
 
 /* Firefox */
